# aspire-non-dotnet

./: .gitignore  README.md  git-aliases.ps1
.github/workflows/: dotnet.yml
AspireAppHost/: AppHost.cs  AspireAppHost.csproj  DevCertHostingExtensions.cs  NodeHostingExtensions.cs  packages.lock.json
AspireAppHost/Properties/: launchSettings.json
NodeApp/: app.ts  instrumentation.ts  package.json  pnpm-lock.yaml  tsconfig.json
PythonUv/: .dockerignore  Dockerfile  README.md  pyproject.toml
PythonUv/src/api/: __init__.py  telemetry.py
RustPaymentApi/: Cargo.toml  Test-Payment.ps1
RustPaymentApi/src/: main.rs
mongodb/: compose.yml  populate.ps1
web-vite-react/: README.md  index.html  package.json  pnpm-lock.yaml
web-vite-react/src/: App.css  App.tsx  index.css
web-vite-react/src/services/: productService.ts
