[project]
name = "pythonuv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.119.0",
    "motor>=3.4.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.2",
    "opentelemetry-instrumentation-fastapi>=0.59b0",
    "opentelemetry-instrumentation-httpx>=0.59b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.38.0",
    "opentelemetry-distro>=0.59b0",
    "opentelemetry-instrumentation-pymongo>=0.59b0",
]
